--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 tests/.ipynb_checkpoints/NAME_SURNAME_ASSIGN_1-checkpoint.ipynb
 *.pkl
+lectures/mashme3.txt
+dist/MSCA07013-0.0.1-py3.7.egg
+lectures/mashme3.txt
